--- a/#src/scss/header.scss
+++ b/#src/scss/header.scss
@@ -8,7 +8,7 @@
 	// .header__content
 
 	&__content {
-		background: rgb(238, 235, 235);
+		background-color: $mainColor4;
 	}
 	
 	// .header__wrapper
