--- a/electric/css/style.css
+++ b/electric/css/style.css
@@ -79,7 +79,7 @@ section {
 }
 
 html {
-  font-size: 16px;
+  font-size: 18px;
 }
 
 html,
@@ -936,7 +936,7 @@ body.ie ._ibg img {
 }
 
 .header__content {
-  background: #eeebeb;
+  background-color: #fffafa;
 }
 
 .header__top {
@@ -1061,10 +1061,251 @@ body.ie ._ibg img {
   display: none;
 }
 
+.footer__content {
+  padding: 70px 0px;
+}
+
+.footer__items {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: start;
+}
+
+.footer__item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  /* align-items: flex-start; */
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  width: 32%;
+}
+
+.footer__item h3 {
+  margin-bottom: 30px;
+}
+
+.footer__text {
+  line-height: 30px;
+}
+
+.footer__text a {
+  color: #000;
+}
+
+.footer__links li a {
+  color: #000;
+}
+
+.footer__link {
+  font-size: 20px;
+  line-height: 30px;
+  margin-left: 10px;
+}
+
+.logo__text {
+  color: #000;
+}
+
 .page {
   -webkit-box-flex: 1;
       -ms-flex: 1 1 auto;
           flex: 1 1 auto;
+}
+
+.info__wrapper {
+  background-color: #fff000;
+}
+
+.info__items {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  padding: 40px 0px;
+}
+
+.info__item {
+  padding: 0px 20px;
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 33.333%;
+          flex: 1 1 33.333%;
+}
+
+.info__text {
+  font-size: 19px;
+  margin-top: 20px;
+  line-height: 30px;
+}
+
+.info__text li::before {
+  content: "-";
+  font-weight: 700;
+  padding: 0px 10px;
+}
+
+h3 {
+  font-size: 22px;
+  font-weight: 700;
+  padding: 0px 10px;
+}
+
+h2 {
+  font-size: 40px;
+  font-weight: 700;
+  text-align: center;
+}
+
+.services__wrapper {
+  background-color: #fffdfd;
+  padding: 60px 0px;
+}
+
+.services__title-text {
+  font-size: 22px;
+  text-align: center;
+  margin: 20px 0px;
+}
+
+.services__items {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: 30px;
+}
+
+.services__item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  height: 400px;
+  width: 29%;
+  border: 2px solid #000;
+  border-radius: 10px;
+  padding: 40px 20px;
+}
+
+.services__item h3 {
+  text-align: center;
+}
+
+.services__item-text {
+  text-align: center;
+  font-weight: 400;
+  line-height: 25px;
+  font-size: 16px;
+  margin: 10px 0px;
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 auto;
+          flex: 1 1 auto;
+}
+
+.services__item-link {
+  display: inline-block;
+  text-align: center;
+  position: relative;
+}
+
+.services__item-link::before {
+  content: "";
+  position: absolute;
+  width: 20px;
+  height: 20px;
+  top: 0px;
+  left: -27px;
+  background-image: url(../img/link.svg);
+  background-repeat: no-repeat;
+  background-size: contain;
+}
+
+.glow-button {
+  text-decoration: none;
+  display: inline-block;
+  padding: 15px 30px;
+  margin: 10px 20px;
+  border-radius: 10px;
+  -webkit-box-shadow: 0 0 40px 40px #fff000 inset, 0 0 0 0 #fff000;
+          box-shadow: 0 0 40px 40px #fff000 inset, 0 0 0 0 #fff000;
+  font-weight: bold;
+  letter-spacing: 2px;
+  -webkit-transition: 0.15s ease-in-out;
+  -o-transition: 0.15s ease-in-out;
+  transition: 0.15s ease-in-out;
+  margin: 20px 0px;
+  color: #000;
+}
+
+.glow-button:hover {
+  -webkit-box-shadow: 0 0 10px 0 #fff000 inset, 0 0 10px 4px #fff000;
+          box-shadow: 0 0 10px 0 #fff000 inset, 0 0 10px 4px #fff000;
+}
+
+.btn-link {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.call-block {
+  padding: 50px;
+}
+
+.call-block h2 {
+  font-size: 30px;
+  margin-bottom: 20px;
+}
+
+.call-block__wrapper {
+  background-color: #fff000;
+}
+
+.call-block .btn-link .glow-button {
+  -webkit-box-shadow: 0 0 40px 40px #fff8f8 inset, 0 0 0 0 #fffcfc;
+          box-shadow: 0 0 40px 40px #fff8f8 inset, 0 0 0 0 #fffcfc;
+  font-size: 25px;
+}
+
+.call-block .btn-link .glow-button:hover {
+  -webkit-box-shadow: 0 0 10px 0 #272725 inset, 0 0 10px 4px #161515;
+          box-shadow: 0 0 10px 0 #272725 inset, 0 0 10px 4px #161515;
 }
 
 @media (min-width: 991.98px) {
@@ -1133,6 +1374,10 @@ body.ie ._ibg img {
 
   .header__item {
     font-size: 18px;
+  }
+
+  .services__item {
+    width: 45%;
   }
 }
 
@@ -1255,11 +1500,33 @@ body.ie ._ibg img {
             transform: rotate(45deg);
     bottom: calc(50% - 1px);
   }
+
+  .info__items {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+
+  .info__item {
+    -webkit-box-flex: 0;
+        -ms-flex: 0 0 96%;
+            flex: 0 0 96%;
+    padding: 30px 0px;
+  }
 }
 
 @media (max-width: 767.98px) and (max-width: 360px) {
   .icon-menu {
     left: 15px;
+  }
+}
+
+@media (max-width: 600px) {
+  .services__item {
+    width: 94%;
+    height: auto;
   }
 }
 
