--- a/#src/scss/footer.scss
+++ b/#src/scss/footer.scss
@@ -12,6 +12,16 @@
 		display: flex;
 		justify-content: space-between;
 		align-items: start;
+		@media (max-width: $md3+px) {
+			padding: 60px;
+			flex-direction: column;
+			justify-content: center;
+			align-items: center;
+		}
+		@media (max-width: 450px) {
+			padding: 60px 0px;
+			
+		}
 	}
 
 	// .footer__item
@@ -19,11 +29,26 @@
 	&__item {
 		display: flex;
 		flex-direction: column;
-		/* align-items: flex-start; */
 		justify-content: center;
 		width: 32%;
+		@media (max-width: $md2+px) {
+			width: 47%;
+		}
+		@media (max-width: $md3+px) {
+			width: 96%;
+
+		}
+		&:first-child {
+			@media (max-width: $md2+px) {
+				display: none;
+			}
+			
+		}
 		& h3{
 			margin-bottom: 30px;
+			@media (max-width: $md3+px) {
+				margin-bottom: 10px;
+			}
 		}
 	}
 
@@ -31,9 +56,12 @@
 
 	&__text {
 		line-height: 30px;
+		padding-left: 10px;
+		margin-bottom: 40px;
 		& a{
-			color: $mainColor;
-	
+			line-height: 20px;
+			color: $mainColor5;
+			margin: 10px 0px;
 		}
 	}
 
@@ -41,7 +69,7 @@
 
 	&__links {
 		& li a{
-			color: $mainColor;
+			color: $mainColor5;
 		}
 	}
 
@@ -51,13 +79,22 @@
 		font-size: 20px;
 		line-height: 30px;
 		margin-left: 10px;
+		font-weight: 500;
+		border-bottom: 1px solid #050202;
+		@media (max-width: $md1+px) {
+			font-size: 16px;
+		}
+		&:hover{
+			border-bottom: 1px solid $mainColor3;
+		}
+
 	}
 }
 
 .logo {
 	// .logo__text
 	&__text {
-		color: $mainColor;
+		color: $mainColor5;
 	}
 }
 
