--- a/electric/css/style.css
+++ b/electric/css/style.css
@@ -145,7 +145,7 @@ h6 {
 }
 
 body {
-  color: #000;
+  color: #2b2a29;
 }
 
 body._lock {
@@ -932,7 +932,7 @@ body.ie ._ibg img {
 }
 
 .header a {
-  color: #000;
+  color: #2b2a29;
 }
 
 .header__content {
@@ -1085,7 +1085,6 @@ body.ie ._ibg img {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  /* align-items: flex-start; */
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
@@ -1098,24 +1097,58 @@ body.ie ._ibg img {
 
 .footer__text {
   line-height: 30px;
+  padding-left: 10px;
+  margin-bottom: 40px;
 }
 
 .footer__text a {
-  color: #000;
+  line-height: 20px;
+  color: #2b2a29;
+  margin: 10px 0px;
 }
 
 .footer__links li a {
-  color: #000;
+  color: #2b2a29;
 }
 
 .footer__link {
   font-size: 20px;
   line-height: 30px;
   margin-left: 10px;
+  font-weight: 500;
+  border-bottom: 1px solid #050202;
+}
+
+.footer__link:hover {
+  border-bottom: 1px solid #fff000;
 }
 
 .logo__text {
-  color: #000;
+  color: #2b2a29;
+}
+
+.aboutUs {
+  background-color: #fff000;
+  padding: 60px;
+}
+
+.aboutUs__wrapper {
+  background-color: #fffafa;
+  padding: 60px;
+}
+
+.aboutUs__wrapper h2 {
+  text-align: left;
+  margin: 35px 0px 20px 0px;
+}
+
+.aboutUs__text {
+  line-height: 27px;
+  margin-top: 20px;
+}
+
+.aboutUs__text span {
+  font-weight: 800;
 }
 
 .page {
@@ -1170,6 +1203,11 @@ h2 {
   font-size: 40px;
   font-weight: 700;
   text-align: center;
+}
+
+h1 {
+  font-size: 45px;
+  font-weight: 800;
 }
 
 .services__wrapper {
@@ -1260,7 +1298,7 @@ h2 {
   -o-transition: 0.15s ease-in-out;
   transition: 0.15s ease-in-out;
   margin: 20px 0px;
-  color: #000;
+  color: #2b2a29;
 }
 
 .glow-button:hover {
@@ -1285,12 +1323,13 @@ h2 {
 }
 
 .call-block {
-  padding: 50px;
+  padding: 60px 0px;
 }
 
 .call-block h2 {
   font-size: 30px;
   margin-bottom: 20px;
+  line-height: 35px;
 }
 
 .call-block__wrapper {
@@ -1306,6 +1345,25 @@ h2 {
 .call-block .btn-link .glow-button:hover {
   -webkit-box-shadow: 0 0 10px 0 #272725 inset, 0 0 10px 4px #161515;
           box-shadow: 0 0 10px 0 #272725 inset, 0 0 10px 4px #161515;
+}
+
+.table-price {
+  margin-top: 60px;
+  text-align: left;
+}
+
+.table-price th {
+  background-color: #fff000;
+  padding: 15px;
+  font-size: 23px;
+}
+
+.table-price td {
+  padding: 6px;
+}
+
+.table-price tr:nth-child(even) {
+  background-color: #dbddf0;
 }
 
 @media (min-width: 991.98px) {
@@ -1342,6 +1400,10 @@ h2 {
     font-size: 29px;
     margin: 13px 0px 3px 0px;
   }
+
+  .footer__link {
+    font-size: 16px;
+  }
 }
 
 @media (max-width: 991.98px) {
@@ -1374,6 +1436,14 @@ h2 {
 
   .header__item {
     font-size: 18px;
+  }
+
+  .footer__item {
+    width: 47%;
+  }
+
+  .footer__item:first-child {
+    display: none;
   }
 
   .services__item {
@@ -1501,6 +1571,36 @@ h2 {
     bottom: calc(50% - 1px);
   }
 
+  .footer__items {
+    padding: 60px;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+
+  .footer__item {
+    width: 96%;
+  }
+
+  .footer__item h3 {
+    margin-bottom: 10px;
+  }
+
+  .aboutUs {
+    padding: 60px 10px;
+  }
+
+  .aboutUs__wrapper {
+    padding: 60px 10px;
+  }
+
   .info__items {
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
@@ -1515,6 +1615,20 @@ h2 {
             flex: 0 0 96%;
     padding: 30px 0px;
   }
+
+  h2 {
+    font-size: 27px;
+    font-weight: 600;
+  }
+
+  h1 {
+    font-size: 30px;
+    font-weight: 700;
+  }
+
+  .call-block {
+    padding: 60px 0px;
+  }
 }
 
 @media (max-width: 767.98px) and (max-width: 360px) {
@@ -1527,6 +1641,30 @@ h2 {
   .services__item {
     width: 94%;
     height: auto;
+  }
+
+  .call-block h2 span {
+    display: block;
+    width: auto;
+  }
+
+  .table-price {
+    font-size: 15px;
+  }
+
+  .table-price th {
+    padding: 15px 5px;
+    font-size: 17px;
+  }
+
+  .table-price td {
+    font-size: 15px;
+  }
+}
+
+@media (max-width: 450px) {
+  .footer__items {
+    padding: 60px 0px;
   }
 }
 
