--- a/#src/scss/header.scss
+++ b/#src/scss/header.scss
@@ -1,6 +1,37 @@
 //====================================================================================================
 
+.logo {
+	display: flex;
+	@media (max-width: $md3+px) {
+		margin-top: 5px;
+	}
+	& img{
+		height: 80px;
+		width: 80px;
+	}
+	// .logo__text
 
+	&__text {
+		font-size: 19px;
+		font-weight: 500;
+		letter-spacing: -1px;
+		text-shadow:1px 1px 2px #333333;
+		@media (max-width: $md1+px) {
+			font-size: 16px;
+		}
+		& span{
+			display: inline-block;
+			margin: 8px 0px 3px 0px;
+			font-size: 35px;
+			letter-spacing: 1px;
+			font-weight: 700;
+			@media (max-width: $md1+px) {
+				font-size: 29px;
+				margin: 13px 0px 3px 0px;
+			}
+		}
+	}
+}
 .header {
 	& a{
 	 color: $mainColor5;
@@ -11,11 +42,6 @@
 		background-color: $mainColor4;
 	}
 	
-	// .header__wrapper
-	
-	&__wrapper {
-	}
-
 	// .header__top
 
 	&__top {
@@ -23,6 +49,7 @@
 		align-items: center;
 		justify-content: space-between;
 		height: 110px;
+		
 		@media (max-width: $md2+px) {
 			flex-direction: column;
 			height: 120px;
@@ -39,6 +66,7 @@
 		display: flex;
 		justify-content: center;
 		align-items: center;
+		position: relative;
 		@media (max-width: $md2+px) {
 			margin-top: 4px;
 		}
@@ -48,7 +76,6 @@
 		}
 		& > li {
 			padding: 0px 20px; 
-			
 		}
 		& li:last-child{	
 			padding: 0px 0px 0px 20px;
@@ -85,9 +112,12 @@
 		}
 	}
 
-	// .header__bottom
+}
+.bottom{
+	background-color: $mainColor2;
+	color: #fff;
 
-	&__bottom {
+	&__wrapper {
 		display: flex;
 		justify-content: space-between;
 		align-items: center;
@@ -104,8 +134,6 @@
 		}
 	}
 
-	// .header__item
-
 	&__item {
 		font-size: 25px;
 		font-weight: 700;
@@ -118,11 +146,6 @@
 			padding: 5px;
 		}
 	}
-
-}
-.bottom__wrapper{
-	background-color: $mainColor2;
-	color: #fff;
 }
 
 ._icon-location{
@@ -132,55 +155,22 @@
 	}
 }
 
-.logo {
-	display: flex;
-	@media (max-width: $md3+px) {
-		margin-top: 5px;
-	}
-	& img{
-		height: 80px;
-		width: 80px;
-	}
-	// .logo__text
-
-	&__text {
-		font-size: 19px;
-		font-weight: 500;
-		letter-spacing: -1px;
-		text-shadow:1px 1px 2px #333333;
-		@media (max-width: $md1+px) {
-			font-size: 16px;
-		}
-		& span{
-			display: inline-block;
-			margin: 8px 0px 3px 0px;
-			font-size: 35px;
-			letter-spacing: 1px;
-			font-weight: 700;
-			@media (max-width: $md1+px) {
-				font-size: 29px;
-				margin: 13px 0px 3px 0px;
-			}
-		}
-	}
-}
 .menu {
-
 	// .menu__body
-
+	
 	&__body {
 		@media (max-width: $md3+px) {
 			position: fixed;
 			z-index: 2;
 			top: 0;
 			left: 0;
-			width: 310px;
-			height: 350px;
+			width: 410px;
 			transform: translate(-100%, 90px);
 			background-color:#fff;
 			padding: 20px 0px 30px 0px;
 			transition: all 0.8s ease 0s;
-			overflow: auto;
+			overflow: hidden;
+			box-shadow: 4px 4px 8px 0px rgba(34, 60, 80, 0.2);
 		}
 		&._active {
 			transform: translate(0px, 90px);
@@ -193,6 +183,90 @@
 
 	}
 }
+
+.sevises-link{
+	@media (max-width: $md3+px){
+	&::before {
+		content: '▶ ';
+		position: relative;
+		font-size: 80%;
+		top: -2px;
+	}
+}	
+}
+._open.sevises-link{
+	@media (max-width: $md3+px){
+	position: relative;
+	&::before {
+		content: '▼ ';	
+	}
+}
+}
+
+.sub__links{
+	opacity: 0;
+	position: absolute;
+	top: 30px;
+	left: 110px;
+	z-index: 10;
+	padding: 30px;
+	background-color: #fff;
+	border-radius: 5px;
+	box-shadow: 4px 4px 8px 0px rgba(34, 60, 80, 0.2);
+	visibility: hidden;
+	transition: all 0.2s ease 0s;
+	@media (max-width: $md3+px) {
+		display: none;
+		opacity: 1;
+		visibility: visible;
+		position: relative;
+		top: 0px;
+		left: 0px;
+		font-size: 20px;
+		font-weight: 600;
+		background-color: rgba(255, 255, 255, 0);
+		box-shadow:none;
+		padding: 10px; 
+		line-height: 40px;
+	}
+	&li{
+		line-height: 30px;
+	}
+	& li:last-child{	
+		padding: 0px 0px 0px 0px;
+	}
+	&__link li{
+	}
+	& li a{
+		border: none;
+		line-height: 30px;
+	}
+	& li a:hover{
+		@media (min-width: $md3+px) {
+		border: none;
+		&::before {
+			content: '▶ ';
+			font-size: 120%;
+		}
+	}
+	}
+}
+@media (min-width: $md3+px) {
+	.header__links>li:hover .sub__links{
+		opacity: 1;
+		visibility: visible;
+		transition: all 0.3s ease 0s;
+	}		
+}
+
+@media (max-width: $md3+px) {
+	._active{
+		transition: all 0.3s ease 0s; 
+		display: block;
+	}	
+}
+
+
 //====================================================================================================
 
 
