--- a/#src/scss/style.scss
+++ b/#src/scss/style.scss
@@ -49,8 +49,8 @@ body {
 //<ОБОЛОЧКА>===========================================================================================================
 .wrapper {
 	width: 100%;
-	min-height: 100%;
-	overflow: hidden;
+	/* min-height: 100%; */
+	/* overflow: hidden; */
 	display: flex;
 	flex-direction: column;
 	&._loaded {
@@ -94,6 +94,9 @@ body {
 //<ОСНОВНОЙ БЛОК>====================================================================================================
 .page {
 	flex: 1 1 auto;
+}
+a[href*='tel'], a[href*='mailto'] {
+	white-space: nowrap;
 }
 //===================================================================================================================================
 .info {
@@ -279,11 +282,9 @@ h1{
 		font-size: 30px;
 		margin-bottom: 20px;
 		line-height: 35px;
-	}
-	& h2 span{
-		@media (max-width: 600px) {
-			display: block;
-			width: auto;
+		& a{
+			font-size: 30px;
+			color: inherit;
 		}
 	}
 	&__wrapper {
