--- a/electric/css/style.css
+++ b/electric/css/style.css
@@ -154,8 +154,8 @@ body._lock {
 
 .wrapper {
   width: 100%;
-  min-height: 100%;
-  overflow: hidden;
+  /* min-height: 100%; */
+  /* overflow: hidden; */
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -931,6 +931,32 @@ body.ie ._ibg img {
   background: url("../img/icons/close.svg") 0 0 no-repeat;
 }
 
+.logo {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.logo img {
+  height: 80px;
+  width: 80px;
+}
+
+.logo__text {
+  font-size: 19px;
+  font-weight: 500;
+  letter-spacing: -1px;
+  text-shadow: 1px 1px 2px #333333;
+}
+
+.logo__text span {
+  display: inline-block;
+  margin: 8px 0px 3px 0px;
+  font-size: 35px;
+  letter-spacing: 1px;
+  font-weight: 700;
+}
+
 .header a {
   color: #2b2a29;
 }
@@ -962,6 +988,7 @@ body.ie ._ibg img {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  position: relative;
 }
 
 .header__links > li {
@@ -990,7 +1017,12 @@ body.ie ._ibg img {
   text-shadow: 1px 1px 1px #8f8585;
 }
 
-.header__bottom {
+.bottom {
+  background-color: #2b2a2a;
+  color: #fff;
+}
+
+.bottom__wrapper {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1003,11 +1035,11 @@ body.ie ._ibg img {
   padding: 20px 0px;
 }
 
-.header__bottom a {
+.bottom__wrapper a {
   color: #fff;
 }
 
-.header__item {
+.bottom__item {
   font-size: 25px;
   font-weight: 700;
   display: -webkit-inline-box;
@@ -1016,45 +1048,44 @@ body.ie ._ibg img {
   text-shadow: 1px 1px 2px #918888;
 }
 
-.bottom__wrapper {
-  background-color: #2b2a2a;
-  color: #fff;
-}
-
 ._icon-location {
   margin-left: 23px;
-}
-
-.logo {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-}
-
-.logo img {
-  height: 80px;
-  width: 80px;
-}
-
-.logo__text {
-  font-size: 19px;
-  font-weight: 500;
-  letter-spacing: -1px;
-  text-shadow: 1px 1px 2px #333333;
-}
-
-.logo__text span {
-  display: inline-block;
-  margin: 8px 0px 3px 0px;
-  font-size: 35px;
-  letter-spacing: 1px;
-  font-weight: 700;
 }
 
 .menu__body._active {
   -webkit-transform: translate(0px, 90px);
       -ms-transform: translate(0px, 90px);
           transform: translate(0px, 90px);
+}
+
+.sub__links {
+  opacity: 0;
+  position: absolute;
+  top: 30px;
+  left: 110px;
+  z-index: 10;
+  padding: 30px;
+  background-color: #fff;
+  border-radius: 5px;
+  -webkit-box-shadow: 4px 4px 8px 0px rgba(34, 60, 80, 0.2);
+          box-shadow: 4px 4px 8px 0px rgba(34, 60, 80, 0.2);
+  visibility: hidden;
+  -webkit-transition: all 0.2s ease 0s;
+  -o-transition: all 0.2s ease 0s;
+  transition: all 0.2s ease 0s;
+}
+
+.sub__linksli {
+  line-height: 30px;
+}
+
+.sub__links li:last-child {
+  padding: 0px 0px 0px 0px;
+}
+
+.sub__links li a {
+  border: none;
+  line-height: 30px;
 }
 
 .icon-menu {
@@ -1155,6 +1186,11 @@ body.ie ._ibg img {
   -webkit-box-flex: 1;
       -ms-flex: 1 1 auto;
           flex: 1 1 auto;
+}
+
+a[href*=tel],
+a[href*=mailto] {
+  white-space: nowrap;
 }
 
 .info__wrapper {
@@ -1332,6 +1368,11 @@ h1 {
   line-height: 35px;
 }
 
+.call-block h2 a {
+  font-size: 30px;
+  color: inherit;
+}
+
 .call-block__wrapper {
   background-color: #fff000;
 }
@@ -1366,6 +1407,25 @@ h1 {
   background-color: #dbddf0;
 }
 
+@media (min-width: 767.98px) {
+  .sub__links li a:hover {
+    border: none;
+  }
+
+  .sub__links li a:hover::before {
+    content: "▶ ";
+    font-size: 120%;
+  }
+
+  .header__links > li:hover .sub__links {
+    opacity: 1;
+    visibility: visible;
+    -webkit-transition: all 0.3s ease 0s;
+    -o-transition: all 0.3s ease 0s;
+    transition: all 0.3s ease 0s;
+  }
+}
+
 @media (min-width: 991.98px) {
   .quantity__button:hover::before,
   .quantity__button:hover::after {
@@ -1388,10 +1448,6 @@ h1 {
     max-width: 970px;
   }
 
-  .header__link {
-    font-size: 17px;
-  }
-
   .logo__text {
     font-size: 16px;
   }
@@ -1399,6 +1455,10 @@ h1 {
   .logo__text span {
     font-size: 29px;
     margin: 13px 0px 3px 0px;
+  }
+
+  .header__link {
+    font-size: 17px;
   }
 
   .footer__link {
@@ -1434,7 +1494,7 @@ h1 {
     margin-top: 4px;
   }
 
-  .header__item {
+  .bottom__item {
     font-size: 18px;
   }
 
@@ -1455,6 +1515,10 @@ h1 {
   ._container {
     max-width: none;
     padding: 0 10px;
+  }
+
+  .logo {
+    margin-top: 5px;
   }
 
   .header__top {
@@ -1485,7 +1549,7 @@ h1 {
     font-size: 23px;
   }
 
-  .header__bottom {
+  .bottom__wrapper {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
@@ -1493,12 +1557,8 @@ h1 {
     padding: 10px;
   }
 
-  .header__item {
+  .bottom__item {
     padding: 5px;
-  }
-
-  .logo {
-    margin-top: 5px;
   }
 
   .menu__body {
@@ -1506,8 +1566,7 @@ h1 {
     z-index: 2;
     top: 0;
     left: 0;
-    width: 310px;
-    height: 350px;
+    width: 410px;
     -webkit-transform: translate(-100%, 90px);
         -ms-transform: translate(-100%, 90px);
             transform: translate(-100%, 90px);
@@ -1516,7 +1575,47 @@ h1 {
     -webkit-transition: all 0.8s ease 0s;
     -o-transition: all 0.8s ease 0s;
     transition: all 0.8s ease 0s;
-    overflow: auto;
+    overflow: hidden;
+    -webkit-box-shadow: 4px 4px 8px 0px rgba(34, 60, 80, 0.2);
+            box-shadow: 4px 4px 8px 0px rgba(34, 60, 80, 0.2);
+  }
+
+  .sevises-link::before {
+    content: "▶ ";
+    position: relative;
+    font-size: 80%;
+    top: -2px;
+  }
+
+  ._open.sevises-link {
+    position: relative;
+  }
+
+  ._open.sevises-link::before {
+    content: "▼ ";
+  }
+
+  .sub__links {
+    display: none;
+    opacity: 1;
+    visibility: visible;
+    position: relative;
+    top: 0px;
+    left: 0px;
+    font-size: 20px;
+    font-weight: 600;
+    background-color: rgba(255, 255, 255, 0);
+    -webkit-box-shadow: none;
+            box-shadow: none;
+    padding: 10px;
+    line-height: 40px;
+  }
+
+  ._active {
+    -webkit-transition: all 0.3s ease 0s;
+    -o-transition: all 0.3s ease 0s;
+    transition: all 0.3s ease 0s;
+    display: block;
   }
 
   .icon-menu {
@@ -1643,11 +1742,6 @@ h1 {
     height: auto;
   }
 
-  .call-block h2 span {
-    display: block;
-    width: auto;
-  }
-
   .table-price {
     font-size: 15px;
   }
@@ -1669,7 +1763,7 @@ h1 {
 }
 
 @media (max-width: 350px) {
-  .header__bottom {
+  .bottom__wrapper {
     -webkit-box-align: start;
         -ms-flex-align: start;
             align-items: start;
