--- a/#src/scss/header.scss
+++ b/#src/scss/header.scss
@@ -102,6 +102,7 @@
 		font-size: 20px;
 		font-weight: 700;
 		text-shadow:1px 1px 1px #8f8585;
+		
 		@media (max-width: $md1+px) {
 			font-size: 17px;
 		}
@@ -229,6 +230,11 @@
 		padding: 10px; 
 		line-height: 40px;
 	}
+	@media (max-width: 420px) {
+	font-size: 16px;
+	padding: 10px 0px;
+	left: -10px;
+	}
 	&li{
 		line-height: 30px;
 	}
@@ -238,19 +244,19 @@
 	&__link li{
 	}
 	& li a{
-		border: none;
+		border: #fff;
 		line-height: 30px;
 	}
-	& li a:hover{
-		@media (min-width: $md3+px) {
-		border: none;
-		&::before {
-			content: '▶ ';
-			font-size: 120%;
-		}
-	}
+}
+.sub__links li a:hover{
+	@media (min-width: $md3+px) {
+	border: #fff;
+	font-size: 110%;
+		
 	}
 }
+
+
 @media (min-width: $md3+px) {
 	.header__links>li:hover .sub__links{
 		opacity: 1;
