--- a/electric/css/style.css
+++ b/electric/css/style.css
@@ -1084,7 +1084,7 @@ body.ie ._ibg img {
 }
 
 .sub__links li a {
-  border: none;
+  border: #fff;
   line-height: 30px;
 }
 
@@ -1156,6 +1156,82 @@ body.ie ._ibg img {
 
 .logo__text {
   color: #2b2a29;
+}
+
+#myBtn {
+  display: none;
+  position: fixed;
+  bottom: 20px;
+  right: 30px;
+  z-index: 99;
+  border: none;
+  outline: none;
+  /* background-color: red;  */
+  color: white;
+  cursor: pointer;
+  /* padding: 15px; */
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  -webkit-box-shadow: 4px 4px 8px 3px rgba(34, 60, 80, 0.356);
+          box-shadow: 4px 4px 8px 3px rgba(34, 60, 80, 0.356);
+  -webkit-animation: btnTop 2s infinite;
+          animation: btnTop 2s infinite;
+}
+
+#myBtn::after {
+  content: "»";
+  position: absolute;
+  top: 0px;
+  left: 12px;
+  -webkit-transform: rotateZ(-90deg);
+      -ms-transform: rotate(-90deg);
+          transform: rotateZ(-90deg);
+  font-size: 40px;
+}
+
+#myBtn:hover {
+  background-color: #555;
+}
+
+@-webkit-keyframes btnTop {
+  0% {
+    -webkit-transform: translateY(0px);
+            transform: translateY(0px);
+    background-color: red;
+  }
+
+  50% {
+    -webkit-transform: translateY(-20px);
+            transform: translateY(-20px);
+    background-color: #ced12b;
+  }
+
+  100% {
+    -webkit-transform: translateY(0px);
+            transform: translateY(0px);
+    background-color: red;
+  }
+}
+
+@keyframes btnTop {
+  0% {
+    -webkit-transform: translateY(0px);
+            transform: translateY(0px);
+    background-color: red;
+  }
+
+  50% {
+    -webkit-transform: translateY(-20px);
+            transform: translateY(-20px);
+    background-color: #ced12b;
+  }
+
+  100% {
+    -webkit-transform: translateY(0px);
+            transform: translateY(0px);
+    background-color: red;
+  }
 }
 
 .aboutUs {
@@ -1282,13 +1358,17 @@ h1 {
           flex-direction: column;
   height: 400px;
   width: 29%;
-  border: 2px solid #000;
+  border: 2px solid #2b2a2a;
   border-radius: 10px;
   padding: 40px 20px;
 }
 
 .services__item h3 {
   text-align: center;
+}
+
+.services__item:hover {
+  border: 2px solid #bd9d9d;
 }
 
 .services__item-text {
@@ -1409,12 +1489,8 @@ h1 {
 
 @media (min-width: 767.98px) {
   .sub__links li a:hover {
-    border: none;
-  }
-
-  .sub__links li a:hover::before {
-    content: "▶ ";
-    font-size: 120%;
+    border: #fff;
+    font-size: 110%;
   }
 
   .header__links > li:hover .sub__links {
@@ -1759,6 +1835,14 @@ h1 {
 @media (max-width: 450px) {
   .footer__items {
     padding: 60px 0px;
+  }
+}
+
+@media (max-width: 420px) {
+  .sub__links {
+    font-size: 16px;
+    padding: 10px 0px;
+    left: -10px;
   }
 }
 
